# rust-learning

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
chapter_1/: notes.txt
chapter_1/1.2_hello_world/: main.rs
chapter_1/hello_world/: main.rs
chapter_2/: notes.txt
chapter_2/guessing_game/src/: main.rs
chapter_3/: notes.txt
chapter_3/branches/src/: main.rs
chapter_3/functions/: Cargo.toml
chapter_3/functions/src/: main.rs
chapter_3/repetition/: Cargo.toml
chapter_3/repetition/src/: main.rs
chapter_3/variables/: Cargo.toml
chapter_3/variables/src/: main.rs
chapter_4/: notes.txt
chapter_4/fixing/: Cargo.toml
chapter_4/fixing/src/: main.rs
chapter_4/ownership/src/: main.rs
chapter_4/refs_and_borrowing/src/: main.rs
chapter_4/slice_type/src/: main.rs
chapter_5/: notes.txt
chapter_5/methods/src/: main.rs
chapter_5/rectangles/src/: main.rs
chapter_5/struct_intro/src/: main.rs
chapter_6/: notes.txt
chapter_6/enums/src/: main.rs
chapter_6/if_let_else/: Cargo.toml
chapter_6/if_let_else/src/: main.rs
chapter_6/match_op/: Cargo.toml
chapter_6/match_op/src/: main.rs
chapter_7/: notes.txt
chapter_7/foobar/: Cargo.toml
chapter_7/foobar/src/: engine.rs  main.rs
chapter_7/modules/src/: garden.rs  main.rs
chapter_7/packages_and_crates/src/: main.rs
chapter_7/path_keywords/: Cargo.toml
chapter_7/path_keywords/src/: lib.rs
chapter_7/restaurant/src/: lib.rs
exercise_projects/: readme.md
exercise_projects/fibonacci/src/: main.rs
exercise_projects/temp_converter/src/: main.rs
exercises/rustlings/: .rustlings-state.txt  README.md
(+20 files in other folders)
