[workspace]

members = [
    "chapter_1/hello_cargo",
    "chapter_2/guessing_game",
    "chapter_3/branches",
    "chapter_3/functions",
    "chapter_3/repetition",
    "chapter_3/variables",
    "chapter_4/fixing",
    "chapter_4/ownership",
    "chapter_4/refs_and_borrowing",
    "exercise_projects/fibonacci",
    "exercise_projects/temp_converter",
    "chapter_4/slice_type",
    "chapter_5/struct_intro",
    "chapter_5/rectangles", "chapter_5/methods"]
resolver = "3"

