[workspace]

members = [
    "chapter_1/hello_cargo",
    "chapter_2/guessing_game",
    "chapter_3/branches",
    "chapter_3/functions",
    "chapter_3/repetition",
    "chapter_3/variables",
    "chapter_4/fixing",
    "chapter_4/ownership",
    "chapter_4/refs_and_borrowing",
    "exercises/other_projects/fibonacci",
    "exercises/other_projects/temp_converter",
    "chapter_4/slice_type",
    "chapter_5/struct_intro",
    "chapter_5/rectangles",
    "chapter_5/methods",
    "chapter_6/enums",
    "chapter_6/match_op",
    "exercises/rustlings", 
    "chapter_6/if_let_else",
    "chapter_7/packages_and_crates", 
    "chapter_7/modules",
    "chapter_7/restaurant",
    ] 

resolver = "3"

